--- a/server/test.env
+++ b/server/test.env
@@ -1,14 +1,6 @@
-# Database
-MONGODB_URI=mongodb://localhost:27017/labour-market-radar
-REDIS_URL=redis://localhost:6379
-
-# Server
-PORT=5000
-NODE_ENV=development
-
-# API Keys (if needed for specific job portals)
-NCS_API_KEY=your_ncs_api_key_here
-INDEED_API_KEY=your_indeed_api_key_here
+# Test Environment Configuration
+NODE_ENV=test
+MONGODB_URI=mongodb://localhost:27017/labour-market-radar-test
 
 # Adzuna API Configuration
 ADZUNA_APP_ID=61f7a880
