--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,14 @@
     "scripts": {
       "start": "node index.js",
       "dev": "nodemon index.js",
-      "seed": "node scripts/seedData.js"
+      "seed": "node scripts/seedData.js",
+      "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+      "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch",
+      "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
+      "test:adzuna": "node scripts/testAdzuna.js",
+      "test:adzuna-api": "node scripts/testAdzunaAPI.js",
+      "test:integration": "node scripts/integrationTest.js",
+      "test:final": "node scripts/finalTest.js"
     },
     "dependencies": {
       "agenda": "^5.0.0",
@@ -21,9 +28,13 @@
       "helmet": "^7.1.0",
       "mongoose": "^8.5.1",
       "morgan": "^1.10.0",
+      "node-fetch": "^3.3.2",
       "playwright": "^1.45.3"
     },
     "devDependencies": {
-      "nodemon": "^3.1.4"
+      "nodemon": "^3.1.4",
+      "jest": "^29.7.0",
+      "supertest": "^6.3.3",
+      "@jest/globals": "^29.7.0"
     }
   }
